# pdf-watermark-artifact-remover

./: ATTRIBUTIONS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: README.zh-CN.md
scripts/: generate_demo_assets.py
src/pdf_watermark_artifact_remover/: __init__.py  cli.py  core.py
tests/: test_core.py
